--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
+    "firebase-admin": "^13.4.0",
     "mysql": "^2.18.1",
     "mysql2": "^3.14.3"
   },
